Bug #344 fix: Front end>>Text in other field is not wrapped properly of Other field textbox in the List type.

--- a/src/components/com_tjucm/media/css/tjucm.css
+++ b/src/components/com_tjucm/media/css/tjucm.css
@@ -18,3 +18,7 @@ width:200px !important;
     width: 100px !important;
     height: auto;
 }
+
+.tjucm-wrapper .tj-wordwrap{
+word-break: break-word;
+}
